fix-spacing for licence icons (#1162)

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -134,6 +134,7 @@ $bkpt-site--wide: 900;
 $bkpt-site--x-wide: 1200;
 
 // TODO: Replace the use of these with site breakpoints above
+$bkpt-content-header--small-width: $bkpt-site--small;
 $bkpt-content-header--medium-width: $bkpt-site--medium;
 $bkpt-content-header--wide: $bkpt-site--wide;
 $bkpt-content-header--extra-wide: $bkpt-site--x-wide;
